k8s_deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nimbus-k8s-provisioner
  labels:
    app: nimbus-k8s-provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nimbus-k8s-provisioner
  template:
    metadata:
      labels:
        app: nimbus-k8s-provisioner
    spec:
      serviceAccount: nimbus-provisioner
      nodeSelector:
        tier: backend
      containers:
      - name: nimbus-k8s-provisioner
        image: jasonb87/nimbus-provisioner:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /p/cscratch/nimbus
          name: jupyterhub-users
      volumes:
      - name: jupyterhub-users
        hostPath:
          path: /p/cscratch/nimbus
      - name: nimbus-k8s-provisioner-secret
        secret:
          secretName: nimbus-k8s-provisioner-secret
      - name: nimbus-k8s-provisioner-config
        configMap:
          name: nimbus-k8s-provisioner-config
---
kind: Service
apiVersion: v1
metadata:
  name: nimbus-k8s-provisioner
spec:
  selector:
    app: nimbus-k8s-provisioner
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nimbus-k8s-provisioner
  annotations:
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nimbus-k8s-provisioner
          servicePort: 8000
        path: /github/webhook/provisioner
